<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="IO" Id="{25700f81-e426-4a73-b55c-f1ac7ee27b09}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		// Digital Input
		bSwitch1 AT %I* : BOOL;
		bSwitch2 AT %I* : BOOL;
		bSwitch3 AT %I* : BOOL;
		bSwitch4 AT %I* : BOOL;
		
	//Digital Output
		bLed1 AT %Q* : BOOL;
		bLed2 AT %Q* : BOOL;
		bLed3 AT %Q* : BOOL;
		bLed4 AT %Q* : BOOL;
		
	//Analog Input
		nResistor1 AT %I* : INT;
		nResistor2 AT %I* : INT;
		
	//Analog Output
		nVoltmeter1 AT %Q* : INT;
		nVoltmeter2 AT %Q* : INT;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>